<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable
            name="titlebar"
            type="String"/>
        <variable
            name="iconLeft"
            type="android.graphics.drawable.Drawable"/>
        <variable
            name="iconRight"
            type="android.graphics.drawable.Drawable"/>
        <variable
            name="appvm"
            type="scoproject.com.contactsappgojek.ui.base.BaseVM"/>
        <variable
            name="vm"
            type="scoproject.com.contactsappgojek.viewmodel.editcontact.EditContactVM"/>
    </data>
    <android.support.design.widget.CoordinatorLayout
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:contentInsetLeft="0dp"
                android:contentInsetStart="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                android:contentInsetRight="0dp"
                android:contentInsetEnd="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetEnd="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <include
                        app:appvm="@{vm}"
                        app:iconLeft="@{vm.iconLeft}"
                        app:titlebar="@{vm.titlebar}"
                        app:iconRight="@{vm.iconRight}"
                        android:id="@+id/add_new_contact_toolbar"
                        layout="@layout/toolbar" />
                    <RelativeLayout
                        android:background="@color/colorDarkGreen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:scaleType="centerCrop"
                            android:id="@+id/edit_user_photo"
                            android:paddingRight="100dp"
                            android:paddingLeft="100dp"
                            android:paddingBottom="4dp"
                            android:paddingTop="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_profile_large"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true" />
                        <ImageButton
                            android:onClick="@{()-> vm.photoOnClick()}"
                            android:paddingRight="16dp"
                            android:paddingBottom="16dp"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true"
                            android:backgroundTint="@android:color/transparent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_image"/>
                    </RelativeLayout>
                </LinearLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="48px"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:id="@+id/detail_contact_call"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16px"
                        android:layout_marginRight="16px"
                        android:backgroundTint="@android:color/transparent"
                        android:src="@drawable/ic_profile" />
                    <LinearLayout
                        android:id="@+id/detail_contact_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16px"
                        android:layout_toRightOf="@+id/detail_contact_call"
                        android:orientation="vertical">
                        <EditText
                            android:id="@+id/edit_fullname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Name"
                            android:maxLines="1"
                            android:inputType="text"
                            android:paddingBottom="16dp"
                            android:text="@={vm.mFullName}"
                            android:textSize="16sp" />
                        <TextView
                            android:id="@+id/edit_fullname_error"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="8dp"
                            android:paddingLeft="5dp"
                            android:textColor="@color/colorRed"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:text="@{vm.mFullNameError}"
                            tool:text="Error" />
                    </LinearLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:id="@+id/detail_contact_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16px"
                        android:layout_marginRight="16px"
                        android:backgroundTint="@android:color/transparent"
                        android:src="@drawable/ic_call_grey" />
                    <LinearLayout
                        android:id="@+id/detail_content_contact_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16px"
                        android:layout_toRightOf="@+id/detail_contact_phone"
                        android:orientation="vertical">
                        <EditText
                            android:id="@+id/edit_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Phone"
                            android:maxLines="1"
                            android:inputType="number"
                            android:paddingBottom="16dp"
                            android:text="@={vm.mPhoneNumber}"
                            android:textSize="16sp" />
                        <TextView
                            android:id="@+id/edit_phone_error"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8px"
                            android:paddingLeft="5dp"
                            android:textColor="@color/colorRed"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:text="@{vm.mPhoneNUmberError}"
                            tool:text="Error" />
                    </LinearLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:id="@+id/detail_contact_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16px"
                        android:layout_marginRight="16px"
                        android:backgroundTint="@android:color/transparent"
                        android:src="@drawable/ic_email" />
                    <LinearLayout
                        android:id="@+id/detail_content_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16px"
                        android:layout_toRightOf="@+id/detail_contact_email"
                        android:orientation="vertical">
                        <EditText
                            android:id="@+id/edit_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Email"
                            android:maxLines="1"
                            android:paddingBottom="16dp"
                            android:inputType="textEmailAddress"
                            android:text="@={vm.mEmail}"
                            android:textSize="16sp" />
                        <TextView
                            android:id="@+id/edit_email_error"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8px"
                            android:paddingLeft="5dp"
                            android:textColor="@color/colorRed"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:text="@{vm.mEmailError}"
                            tool:text="Error" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>
