...
            android:src="@drawable/ic_add_contacts"/>
        <RelativeLayout
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycle_contact_list"
                    android:scrollbars="vertical"
                    android:fadeScrollbars="false"
                    android:visibility="@{vm.isContactNull ? View.GONE : View.VISIBLE}"
                    app:adapter="@{vm.mContactListAdapter}"
                    app:layoutManager="@{vm.mLinearLayoutManager}"
                    android:layout_width="match_parent"
...
