...
                    android:id="@+id/layoutfilter"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/toolbar_submit"
                        tool:src="@drawable/ic_search"
                        android:onClick="@{()-> appvm.rightIconClick()}"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center_vertical"
...
